@@ -5,10 +5,8 @@
   </head>
 
   <body>
-    <h1>The gnu.text Package</h1>
-
 <p>
-The <code>gnu.text</code> package supports various utility classes
+Supports various utility classes
 for formatting, parsing, and manipulating text (strings).
 <p>
 It is used by <a href="http:../kawa/">Kawa</a>.
@@ -30,12 +28,5 @@ of the rest of Kawa.
 <h2>Bugs and patches</h2>
 Send them to <a href="mailto:per@bothner.com">per@bothner.com</a>,
 or to the <a href="mailto:kawa@sourceware.cygnus.com">Kawa mailing list</a>.
-
-    <hr>
-    <address><a href="mailto:per@bothner.com">Per Bothner</a></address>
-<!-- Created: Thu Jun 25 22:32:47 PDT 1998 -->
-<!-- hhmts start -->
-Last modified: Thu Nov 18 15:50:26 PST 1999
-<!-- hhmts end -->
   </body>
 </html>
